--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0|^8.0",
+        "php": "^7.2|^8.*",
+        "illuminate/support": "^9.0|^10.*",
         "guzzlehttp/guzzle": "^7.0",
         "ext-json": "*"
     },
